style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
*{
  margin: 0;
  padding: 0;
  outline: none;
  font-family: 'Poppins', sans-serif;
}
body{
  background: #f1f1f1 ;
  color: #204941;
  font-weight: bold;
  align-items: center;
  justify-content: center;
}
.container{
  width: 100%;
  background: #f1f1f1;
  text-align: center;
  padding: 50px 35px 10px 35px;
  font-size: 1.3vw;
  font-weight: 1vw;

}
.container header{
  font-size: 2vw;
  font-weight: 600;
  margin: 0 0 0 0;
}
.toAlignCenter{
  align-self: center;
}
.toPullLeft{
  display: flex;
  align-self: center;
  justify-content: left;
}
.OrangeCaption{
  color: #f15848 ;
  font-size: 1vw;
  
}
.OrangeCaptionSmall{
  color: #f15848 ;
  font-size: 0.75vw;
  font-weight: 500;
  white-space:nowrap;
}

.desc{
  display: grid;
  align-self: center;
  justify-content: right;
  padding-right: 7%;
  white-space:nowrap;
}

.nextButton {
	background-color:#f15848;
	border-radius:28px;
	cursor:pointer;
	color:#ffffff;
	font-family:"Poppins";
	font-size:17px;
  border:1px solid #f15848;
  padding-top: 0.5%;
  padding-bottom: 0.5%;
  padding-left: 7%;
  padding-right: 7%;  
}
.nextButton:hover {
  background-color:#ffffff;
  color:#f15848;
}
.nextButton:focus {
  outline: none;
  box-shadow: none;
}

.backgroundLine{
  background: linear-gradient(180deg, rgba(0,0,0,0) calc(50% - 2px), rgba(32, 73, 65, 1) calc(50%), rgba(0,0,0,0) calc(50% + 2px) );
}

#leftButton{
  display: grid;
  align-self: center;
  justify-content: left; 
  padding-left: 0%;
}

#rightButton{
  display: grid;
  align-self: center;
  justify-content: right; 
  padding-right: 0%;
}

.regCaption{
  font-size: 0.9vw;
  white-space:nowrap;
  
}

